Yeah. I know. Small incremental changes. But, what the heck. I am learning and I am going to be using that excuse for a while!

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     },
     "autoload": {
         "psr-4": {
-            "SkooppaOS\\webMVc\\": "src"
+            "SkooppaOS\\webMVc\\": "src",
+            "models\\": "src/models"
         }
     }
 }
